# orangeminer

./: CMakeLists.txt  README.md
src/ArgonVariants/: Variants.h
src/Backend/Nvidia/: Nvidia.cpp
src/Config/: Constants.h
src/Miner/: CMakeLists.txt  GetConfig.cpp  main.cpp
src/Utilities/: ColouredMsg.h
